@@ -2,6 +2,7 @@
 # Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
 
 requires "Dist::Zilla" => "0";
+requires "Dist::Zilla::File::InMemory" => "0";
 requires "Dist::Zilla::Plugin::Authority" => "0";
 requires "Dist::Zilla::Plugin::CPANFile" => "0";
 requires "Dist::Zilla::Plugin::ChangeStats::Git" => "v0.2.1";
@@ -40,13 +41,17 @@ requires "Dist::Zilla::Plugin::Test::PAUSE::Permissions" => "0";
 requires "Dist::Zilla::Plugin::Test::ReportPrereqs" => "0";
 requires "Dist::Zilla::Plugin::Test::UnusedVars" => "0";
 requires "Dist::Zilla::Plugin::VerifyPhases" => "0";
+requires "Dist::Zilla::Role::FileGatherer" => "0";
 requires "Dist::Zilla::Role::MintingProfile::ShareDir" => "0";
+requires "Dist::Zilla::Role::Plugin" => "0";
 requires "Dist::Zilla::Role::PluginBundle::Config::Slicer" => "0";
 requires "Dist::Zilla::Role::PluginBundle::Easy" => "0";
+requires "Dist::Zilla::Role::TextTemplate" => "0";
 requires "Moose" => "0";
 requires "Type::Tiny" => "0";
 requires "Types::Standard" => "0";
 requires "experimental" => "0";
+requires "perl" => "v5.20.0";
 requires "strict" => "0";
 requires "warnings" => "0";
 
@@ -56,7 +61,6 @@ on 'test' => sub {
   requires "IO::Handle" => "0";
   requires "IPC::Open3" => "0";
   requires "Test::More" => "0";
-  requires "perl" => "5.006";
 };
 
 on 'test' => sub {
@@ -69,6 +73,7 @@ on 'configure' => sub {
 };
 
 on 'develop' => sub {
+  requires "Software::Security::Policy::Individual" => "0";
   requires "Test::More" => "0.96";
   requires "Test::Vars" => "0";
 };
