@@ -20,6 +20,7 @@ his distributions. It's roughly equivalent to
 
     [InstallGuide]
     [Covenant]
+    [PluginBundle::YANICK::Contributing]
     [ContributorCovenant]
 
     [GithubMeta]
@@ -110,6 +111,11 @@ his distributions. It's roughly equivalent to
 
     [GitHubREADME::Badge]
 
+    [SecurityPolicy]
+    -policy = Individual
+    timeframe = 1 month
+    perl_support_years = 5
+
 
 =head2 ARGUMENTS
 
@@ -142,10 +148,6 @@ Passed to C<ModuleBuild> plugin.
 =head3 include_dotfiles
 
 For C<Git::GatherDir>. Defaults to false.
-
-=head3 tweet
-
-If a tweet should be sent. Defaults to C<true>.
 
 =head3 doap_changelog
 
@@ -205,12 +207,12 @@ Defaults to C<github>.
 
 =head3 import_from_build
 
-    import_from_build = cpanfile,AUTHOR_PLEDGE,CODE_OF_CONDUCT.md
+    import_from_build = cpanfile,AUTHOR_PLEDGE,CODE_OF_CONDUCT.md,CONTRIBUTING.md
 
 Comma-separated list of files to import in the checked out
 repo from the build.
 
-Defaults to C<cpanfile,AUTHOR_PLEDGE,CODE_OF_CONDUCT.md>
+Defaults to C<cpanfile,AUTHOR_PLEDGE,CODE_OF_CONDUCT.md,CONTRIBUTING.md>
 
 =cut
 
@@ -238,7 +240,7 @@ sub configure {
     my $upstream       = $arg->{upstream}       || 'github';
 
     my @import_from_build = $arg->{import_from_build} ? split( ',', $arg->{import_from_build} ) :
-        qw/ cpanfile AUTHOR_PLEDGE CODE_OF_CONDUCT.md /;
+        qw/ cpanfile AUTHOR_PLEDGE CODE_OF_CONDUCT.md CONTRIBUTING.md /;
 
     my %mb_args;
     $mb_args{mb_class} = $arg->{mb_class} if $arg->{mb_class};
@@ -249,6 +251,7 @@ sub configure {
 
     $self->add_plugins(
         qw/
+            =Dist::Zilla::PluginBundle::YANICK::Contributing
             Git::Contributors
             ContributorsFile
             Test::Compile
@@ -355,8 +358,12 @@ sub configure {
 #            ttl_filename => 'project.ttl',
         } ],
         'CPANFile',
+        [ SecurityPolicy => {
+            -policy => 'Individual',
+            timeframe => '1 month',
+            perl_support_years => 5,
+        } ],
     );
-
 
     $self->config_slice( 'mb_class' );
 
